--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         }
 
         body {
+            font-size: 2em;
             display: flex;
             justify-content: center;
             flex-direction: column;
@@ -28,7 +29,6 @@
             flex-direction: column;
 
             font-family: sans-serif;
-            font-size: 2em;
             color: #ddd;
         }
 
@@ -40,6 +40,58 @@
         div:not(.ok) {
             display: none !important;
         }
+
+        button {
+            position: relative;
+            
+            font-size: 0.5em;
+            margin-top: 2em;
+            z-index: 1000;
+            padding: 7px 12px;
+
+            display: flex;
+            flex-direction: row;
+            gap: 3px;
+            align-items: center;
+
+            background: #222;
+            border: none;
+            color: #ddd;
+
+            box-shadow: 0 0 5px #999;
+            border-radius: 3px;
+        }
+
+        button.on {
+            background: #333;
+            color: #fff;
+        }
+
+        button:active {
+            background: #444;
+            transition: background-color 0.3s ease-out;
+        }
+
+        button:hover {
+            cursor: pointer;
+        }
+
+        button::after {
+            margin: -7px -12px;
+            content: '';
+            position: absolute;
+            z-index: -1;
+            width: 100%;
+            height: 100%;
+            opacity: 0;
+            border-radius: 5px;
+            box-shadow: 0 0 8px rgba(255,255,255,0.7);
+            transition: opacity 0.3s ease-in-out;
+        }
+
+        button:hover::after{
+            opacity: 1;
+        }
     </style>
   </head>
 
@@ -49,6 +101,10 @@
         <h1 id="title">&nbsp;</h1>
         <p id="duration">&nbsp;</p>
         <div id="tsparticles" class="ok"></div>
+        <button type="button" id="notify">
+            <img src="./notifications.svg" />
+            Notifications <span id="notify-on-off">&nbsp;</span>
+        </button>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/humanize-duration@3.32.1/humanize-duration.min.js" defer></script>
@@ -102,7 +158,8 @@
                     await showConfetti();
                 }
 
-                if (!notified) {
+                const notificationsOn = localStorage.getItem("enableNotifications") === 'true';
+                if (!notified && !!notificationsOn) {
                     notify();
                 }
             }
@@ -114,21 +171,23 @@
         }
 
         function notify() {
-            if (Notification.permission === "granted") {
-                const notification = new Notification("SP Void Cascade in active");
-                // …
-            } else if (Notification.permission !== "denied") {
-                Notification.requestPermission().then((permission) => {
-                    if (permission === "granted") {
-                        const notification = new Notification("SP Void Cascade in active");
-                    }
-                });
-            }
-
+            const notification = new Notification("SP Void Cascade in active");
             notified = true;
         }
 
         window.addEventListener('DOMContentLoaded', async () => {
+            const notify = localStorage.getItem("enableNotifications") === 'true';
+            if (notify) {
+                if (!Notification.permission) {
+                    // Notify was set to on but we dont have permission. So disable notifications until
+                    // user clicks the button again
+                    localStorage.getItem("enableNotifications", 'false');
+                } else {
+                    document.getElementById('notify').classList.add('on');
+                    document.getElementById('notify-on-off').innerHTML = 'on';
+                }
+            }
+
             await refresh();
 
             setInterval(() => {
@@ -142,10 +201,31 @@
             setInterval(async () => {
                 await refresh();
             }, 60000);
+
+            document.getElementById('notify').addEventListener('click', () => {
+                const notify = localStorage.getItem("enableNotifications") === 'true';
+                if (!notify) {
+                    if (!Notification.permission) {
+                        Notification.requestPermission().then(() => {
+                            new Notification('Notification has been enabled');
+                        });
+                    }
+
+                    document.getElementById('notify').classList.add('on');
+                    document.getElementById('notify-on-off').innerHTML = 'on';
+                } else {
+                    document.getElementById('notify-on-off').innerHTML = 'off';
+                    document.getElementById('notify').classList.remove('on');
+                }
+                
+                localStorage.setItem("enableNotifications", !notify);
+            });
         });
 
         window.addEventListener('focus', async () => {
-            await showConfetti();
+            if (vc.length > 0) {
+                await showConfetti();
+            }
         });
     </script>
   </body>
