--- a/index.html
+++ b/index.html
@@ -202,6 +202,9 @@
                     document.getElementById('notify').classList.add('on');
                     document.getElementById('notify-on-off').innerHTML = 'on';
                 }
+            } else {
+                document.getElementById('notify').classList.remove('on');
+                document.getElementById('notify-on-off').innerHTML = 'off';
             }
 
             await refresh();
