hide button for mobile

--- a/index.html
+++ b/index.html
@@ -264,7 +264,8 @@
 
                     this.refresh();
                 } else {
-                    localStorage.setItem('enableNotifications', 'false')
+                    localStorage.setItem('enableNotifications', 'false');
+                    this.$button.style.display = 'None';
                 }
             }
 
