Check document has focus before throwing confetti

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                 this._updateTitle();
                 this._updateProgress();
 
-                if (this.vcIsActive() && !this.hasConfettied) {
+                if (this.vcIsActive() && !this.hasConfettied && document.hasFocus()) {
                     await this.showConfetti();
                 }
 
